--- a/GamingWorld/styles.css
+++ b/GamingWorld/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 body{
     margin: 0;
     padding: 0;
@@ -6,7 +7,7 @@ body{
 }
 
 .container{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Montserrat", sans-serif;
     color: #fff;
     display: flex;
     flex-direction: column;
@@ -131,7 +132,7 @@ header{
     background-color: #edff66b6;
     position: absolute;
     left: 45%;
-    bottom: 45%;
+    bottom: 30%;
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -408,11 +409,12 @@ header{
     justify-content: space-between;
     background-color: rgba(211,211,211,0.21);
     backdrop-filter: blur(10px);
-    height: 100px;
+    height: 70px;
 }
 
 .footer p{
     margin: 0 20px;
+    font-size: 14px;
 }
 .footer ul{
     display: flex;
@@ -430,3 +432,6 @@ header{
     transition: 0.3s;
     margin: 0 10px;
 }
+
+
+/* Blur Effect animation  */
