--- a/GamingWorld/styles.css
+++ b/GamingWorld/styles.css
@@ -1,12 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-body{
+
+body {
     margin: 0;
     padding: 0;
     background-color: #000000;
     scroll-behavior: smooth;
+    /* cursor: none; */
 }
 
-.container{
+.container {
     font-family: "Montserrat", sans-serif;
     color: #fff;
     display: flex;
@@ -15,7 +17,7 @@ body{
     position: relative;
 }
 
-header{
+header {
     position: absolute;
     top: 0;
     right: 0;
@@ -29,17 +31,18 @@ header{
     backdrop-filter: blur(10px);
 }
 
-.head-left{
+.head-left {
     display: flex;
     align-items: center;
 }
 
-.head-left img{
+.head-left img {
     width: 40px;
     height: 40px;
     margin-right: 20px;
 }
-.head-left button{
+
+.head-left button {
     border: none;
     padding: 10px 30px;
     border-radius: 20px;
@@ -47,14 +50,16 @@ header{
     cursor: pointer;
     transition: 0.3s;
 }
-.head-left button:hover{
+
+.head-left button:hover {
     opacity: 0.7;
 }
-.head-right{
+
+.head-right {
     display: flex
 }
 
-.head-right a{
+.head-right a {
     text-decoration: none;
     padding-left: 25px;
     color: #ffffff;
@@ -63,33 +68,33 @@ header{
 
 /* Hero Section */
 
-.hero-section{
+.hero-section {
     position: relative;
     width: 100%;
     height: 100vh;
     overflow: hidden;
 }
 
-.hero-vid{
+.hero-vid {
     width: 100%;
     height: 100%;
     position: absolute;
 }
 
-.hero-video{
+.hero-video {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.hero-info{
+.hero-info {
     z-index: 1;
     position: absolute;
     top: 80px;
     left: 50px;
 }
 
-.hero-info h1{
+.hero-info h1 {
     font-size: 120px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: 900;
@@ -98,11 +103,12 @@ header{
     margin-bottom: 20px;
 }
 
-.hero-info p{
+.hero-info p {
     color: #ffffff;
     max-width: 210px;
 }
-.hero-info button{
+
+.hero-info button {
     background-color: #edff66;
     border: 2px solid #edff66;
     padding: 10px 40px;
@@ -111,13 +117,14 @@ header{
     color: #000000;
     transition: 0.3s;
 }
-.hero-info button:hover{
+
+.hero-info button:hover {
     background-color: transparent;
     color: #ffffff;
     box-shadow: 0 0 15px #edff66;
 }
 
-.gaming-text{
+.gaming-text {
     font-size: 120px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     margin: 0;
@@ -126,7 +133,7 @@ header{
     bottom: 30px;
 }
 
-.next-btn{
+.next-btn {
     width: 200px;
     height: 200px;
     background-color: #edff66b6;
@@ -146,7 +153,7 @@ header{
     transition: 0.5s;
 }
 
-.next-btn:hover{
+.next-btn:hover {
     width: 200px;
     height: 200px;
     opacity: 1;
@@ -158,7 +165,7 @@ header{
 
 /* About Section  */
 
-.about-section{
+.about-section {
     width: 100%;
     height: 100%;
     margin-top: 200px;
@@ -168,7 +175,7 @@ header{
     color: #ffffff;
 }
 
-.image-box{
+.image-box {
     width: 360px;
     height: 510px;
     overflow: hidden;
@@ -178,16 +185,17 @@ header{
     border-radius: 50px;
 }
 
-.image-box img{
+.image-box img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.about-section p{
+.about-section p {
     font-size: 12px;
 }
-.about-section h1{
+
+.about-section h1 {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: 900;
     font-size: 100px;
@@ -195,26 +203,26 @@ header{
     text-align: center;
     margin: 25px 0;
     text-transform: uppercase;
-    background: linear-gradient(to right,#4acfee, #53f8c9, #02d79a, #6070fd, #2a46ff, #0099ff, #4acfee);
+    background: linear-gradient(to right, #4acfee, #53f8c9, #02d79a, #6070fd, #2a46ff, #0099ff, #4acfee);
     background-size: 200%;
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    animation : animate-gradient 2.5s linear infinite;
+    animation: animate-gradient 2.5s linear infinite;
 }
 
 @keyframes animate-gradient {
-    to{
+    to {
         background-position: 200%;
     }
 }
 
-.about-section h4{
+.about-section h4 {
     margin-top: 50px;
     margin-bottom: 0;
 }
 
-.about-section h5{
+.about-section h5 {
     margin-top: 5px;
     color: grey;
     max-width: 425px;
@@ -226,7 +234,7 @@ header{
 
 /* Info- Seciton  */
 
-.info-section{
+.info-section {
     display: flex;
     flex-direction: column;
     position: relative;
@@ -234,18 +242,18 @@ header{
     margin-top: 100px;
 }
 
-.info-section h3{
+.info-section h3 {
     margin-bottom: 0;
 }
 
-.info-section p{
+.info-section p {
     margin-top: 5px;
     color: gray;
     max-width: 400px;
     line-height: 25px;
 }
- 
-.info-cards{
+
+.info-cards {
     display: grid;
     grid-template-columns: auto auto;
     gap: 20px;
@@ -254,7 +262,7 @@ header{
     margin-top: 30px;
 }
 
-.card{
+.card {
     position: relative;
     width: auto;
     height: 40vh;
@@ -264,7 +272,7 @@ header{
     transition: 0.5s;
 }
 
-.card h1{
+.card h1 {
     position: absolute;
     margin: 0;
     top: 10px;
@@ -272,16 +280,16 @@ header{
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 60px;
     z-index: 1;
-    background: linear-gradient(to right,#4acfee, #53f8c9, #02d79a, #6070fd, #2a46ff, #0099ff, #4acfee);
+    background: linear-gradient(to right, #4acfee, #53f8c9, #02d79a, #6070fd, #2a46ff, #0099ff, #4acfee);
     background-size: 200%;
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    animation : animate-gradient 2.5s linear infinite;
+    animation: animate-gradient 2.5s linear infinite;
     max-width: 250px;
 }
 
-.card p{
+.card p {
     position: absolute;
     top: 80px;
     left: 5%;
@@ -290,13 +298,13 @@ header{
     color: lightgray;
 }
 
-.card video{
+.card video {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.card button{
+.card button {
     position: absolute;
     bottom: 5%;
     left: 5%;
@@ -310,19 +318,20 @@ header{
     transition: 0.3s;
 }
 
-.card button:hover{
+.card button:hover {
     box-shadow: 0 0 15px lightgrey;
     opacity: 0.7;
 }
 
-.card:hover{
+.card:hover {
     box-shadow: 0 0 15px rgb(211, 211, 211);
 }
 
-.card:nth-child(1){
+.card:nth-child(1) {
     grid-column: span 2;
 }
-.card:nth-child(2){
+
+.card:nth-child(2) {
     grid-row: span 2;
     height: 83vh;
 }
@@ -331,7 +340,7 @@ header{
 /* Contact section  */
 
 
-.contact-section{
+.contact-section {
     position: relative;
     width: 100%;
     margin-top: 100px;
@@ -342,7 +351,7 @@ header{
     height: 100%;
 }
 
-.contact-section .img1{
+.contact-section .img1 {
     position: absolute;
     top: 10%;
     right: 20px;
@@ -350,7 +359,7 @@ header{
     clip-path: polygon(25% 0%, 85% 0, 75% 100%, 0% 100%);
 }
 
-.contact-section .img2{
+.contact-section .img2 {
     position: absolute;
     left: 50px;
     top: 10px;
@@ -358,7 +367,7 @@ header{
     clip-path: polygon(22% 13%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
 }
 
-.contact-section .img3{
+.contact-section .img3 {
     position: absolute;
     left: 5%;
     bottom: 5%;
@@ -371,20 +380,20 @@ header{
     margin-top: 100px;
 }
 
-.contact-section h1{
+.contact-section h1 {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 70px;
     max-width: 550px;
     text-align: center;
-    background: linear-gradient(to right,#4acfee, #53f8c9, #02d79a, #6070fd, #2a46ff, #0099ff, #4acfee);
+    background: linear-gradient(to right, #4acfee, #53f8c9, #02d79a, #6070fd, #2a46ff, #0099ff, #4acfee);
     background-size: 200%;
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    animation : animate-gradient 2.5s linear infinite;
+    animation: animate-gradient 2.5s linear infinite;
 }
 
-.contact-section button{
+.contact-section button {
     padding: 10px 25px;
     border: 1px solid gray;
     background-color: #0f1217;
@@ -395,35 +404,37 @@ header{
     transition: 0.3s;
 }
 
-.contact-section button:hover{
+.contact-section button:hover {
     box-shadow: 0 0 15px lightgrey;
     opacity: 0.7;
 }
 
 /* footer */
 
-.footer{
+.footer {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: rgba(211,211,211,0.21);
+    background-color: rgba(211, 211, 211, 0.21);
     backdrop-filter: blur(10px);
     height: 70px;
 }
 
-.footer p{
+.footer p {
     margin: 0 20px;
     font-size: 14px;
 }
-.footer ul{
+
+.footer ul {
     display: flex;
     align-items: center;
     justify-content: center;
     margin-right: 140px;
     list-style: none;
 }
-.footer a{
+
+.footer a {
     text-decoration: none;
     color: white;
     padding: 7px;
@@ -436,21 +447,24 @@ header{
 
 /* Blur Effect animation  */
 
-.autoBlur{
+.autoBlur {
     animation: autoBlurAnimation linear both;
     animation-timeline: view();
 }
 
-@keyframes autoBlurAnimation{
-    0%{
+@keyframes autoBlurAnimation {
+    0% {
         filter: blur(40px);
     }
-    40%,60%{
+
+    40%,
+    60% {
         filter: blur(0);
         transform: translateY(0px);
         opacity: 1;
     }
-    100%{
+
+    100% {
         filter: blur(40px);
         transform: translateY(-200px);
         opacity: 0;
@@ -460,13 +474,13 @@ header{
 
 /* Take Full Screen  */
 
-.autoTakeFull{
+.autoTakeFull {
     animation: autoTakeFullAnimation both;
     animation-timeline: view(70% 65%);
 }
 
-@keyframes autoTakeFullAnimation{
-    to{
+@keyframes autoTakeFullAnimation {
+    to {
         width: 100%;
         height: 100vh;
         border-radius: 0;
@@ -476,17 +490,47 @@ header{
 
 /* Auto Display Animation  */
 
-.autoDisplay{
+.autoDisplay {
     animation: autoDisplayAnimation both;
     animation-timeline: view(70% 5%);
 }
 
-@keyframes autoDisplayAnimation{
-    from{
+@keyframes autoDisplayAnimation {
+    from {
         opacity: 0;
         transform: translateY(200px) scale(0.3);
-    }to{
+    }
+
+    to {
         opacity: 1;
         transform: translateY(0) scale(1);
+    }
+}
+
+
+.cursor {
+    z-index: 9999;
+    position:fixed;
+    background: #2696E8;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    pointer-events: none;
+    box-shadow:
+        0 0 20px #2696E8,
+        0 0 60px #2696E8,
+        0 0 100px #2696E8;
+    animation: colors 5s infinite;
+    transform: translate(-50%, -50%);
+    display: none;
+}
+
+@keyframes colors {
+    0% {
+        filter: hue-rotate(0deg);
+    }
+
+    100% {
+        filter: hue-rotate(360deg);
     }
 }
