--- a/GamingWorld/styles.css
+++ b/GamingWorld/styles.css
@@ -5,7 +5,7 @@ body {
     padding: 0;
     background-color: #000000;
     scroll-behavior: smooth;
-    /* cursor: none; */
+    cursor: none;
 }
 
 .container {
