--- a/GamingWorld/styles.css
+++ b/GamingWorld/styles.css
@@ -438,12 +438,15 @@ header {
     text-decoration: none;
     color: white;
     padding: 7px;
-    border-radius: 50px;
-    border: 1px solid rgb(0, 130, 211);
     transition: 0.3s;
     margin: 0 10px;
 }
 
+.stones-img{
+    position: absolute;
+    margin-top: 22%;
+    width: 500px;
+}
 
 /* Blur Effect animation  */
 
@@ -532,5 +535,77 @@ header {
 
     100% {
         filter: hue-rotate(360deg);
+    }
+}
+
+
+/* responsive part  */
+
+@media screen and (max-width:650px){
+    header{
+        padding: 0 10px;
+    }
+    .head-left button{
+        display: none;
+    }
+    .head-right a{
+        font-size: 12px;
+        padding: 0 5px;
+    }
+    .hero-info{
+        left: 5%;
+    }
+    .hero-section h1{
+        font-size: 90px;
+    }
+    .next-btn{
+        left: 25%;
+        top: 40%;
+    }
+    .about-section{
+        margin: 0;
+    }
+    .about-section h1{
+        font-size: 50px;
+    }
+    .image-box{
+        width: 300px;
+        height: 500px;
+    }
+    .about-section h4, .about-section h5{
+        max-width: 350px;
+        text-align: center;
+    }
+    .contact-section .img1{
+        width: 150px;
+        height: 200px;
+        right: 0;
+        top: 20px;
+    }
+    .contact-section .img2{
+        width: 180px;
+        height: 180px;
+        left: -40px;
+        top: 30px;
+    }
+    .contact-section .img3{
+        width: 150px;
+        height: 180px;
+        left: -40px;
+        bottom: 0;
+    }
+    .contact-section h1{
+        font-size: 60px;
+        max-width: 300px;
+    }
+    .footer p{
+        display: none;
+    }
+    .footer ul{
+        margin-left: 70px;
+    }
+    .stones-img{
+        margin-top: 80%;
+        width: 400px;
     }
 }
